<resources>
    <string name="app_name">Travel App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="auth_attribute_header_email">Email</string>
    <string name="auth_attribute_email">Enter e-mail address</string>
    <string name="auth_attribute_header_password">Password</string>
    <string name="auth_attribute_password">Enter password</string>
    <string name="continue_string">Continue</string>
    <string name="auth_no_account">"Don\'t have an account? "</string>
    <string name="show_password">Show password</string>
    <string name="auth_attribute_header_name">Name</string>
    <string name="auth_attribute_name">Enter your display name</string>
    <string name="auth_forgot_your_password">Forgot your password?</string>
    <string name="google_map_api">AIzaSyC-qOfi7mBYFiltDQV3JGFJcW7hKBt_Scw</string>
    <string name="email_confirmation_verify">A verification email has been sent. Please check your inbox.</string>
    <string name="button_return">Return</string>
    <string name="reset_password">Reset password</string>
    <string name="email_confirmation_reset">A password reset email has been sent. Please check your inbox.</string>
    <string name="guest">Guest</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_name">Schedule name</string>
    <string name="itinerary">Itinerary</string>
    <string name="tab_item_title_placeholder">Day 1</string>
    <string name="tab_item_date_placeholder">July 14</string>
    <string name="day_tab_item_title">Day %1$d</string>
    <string name="user_profile">User profile</string>
    <string name="update_profile">Update profile</string>
    <string name="sign_out">Sign out</string>

    <!--    title page-->
    <string name="title_page_1">Make your own private \ntravel plan</string>
    <string name="title_page_2">Customize your \nHigh-end travel</string>
    <string name="title_page_3">High-end leisure projects \nto choose from</string>


    <!--    description page-->
    <string name="desc_page_1">Formulate your strategy to receive \nwonderful gift packs</string>
    <string name="desc_page_2">Countless high-end \nentertainment facilities</string>
    <string name="desc_page_3">The world\'s first-class modern leisure \nand entertainment method</string>
    <string name="travel_plan">Travel plan</string>
    <string name="hotel_x_days">Hotel (%1$d days)</string>
    <string name="hotel_name">hotel_name</string>
    <string name="flight">Flight</string>
    <string name="country_code">XX</string>
    <string name="airline_name">airline_name</string>
    <string name="determine_the_plan">Determine the plan</string>
    <string name="articles_feed">Articles feed</string>
    <string name="feed">Feed</string>
    <string name="guide">Guide</string>
    <string name="home">Home</string>
    <string name="tab_item_ongoing">Ongoing</string>
    <string name="tab_item_history">History</string>
    <string name="share">Share</string>
    <string name="activity_description">Activity description</string>
    <string name="time">Time</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="itinerary_arrangement">Itinerary Arrangement</string>
    <string name="type_a_message">Type a message</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="swipe_to_cancel">Swipe left to cancel a schedule</string>
    <string name="schedule_date">From %1$s to %2$s</string>
    <string name="schedule_cost">$ %.1f</string>
    <string name="schedule_hotel_name">Hotel: %1$s</string>
    <string name="chat_ai">Chat AI</string>
</resources>