<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:background="@drawable/search_view_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/add_new_activity"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:padding="15dp"
            android:elevation="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/time_edit_text"
                android:text="@string/time"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/share_button"/>

            <EditText
                android:id="@+id/activity_edit_text"
                android:hint="@string/activity_description"
                android:inputType="text"
                android:background="@drawable/field_user"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>