<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UserInfoFragment">

    <TextView
        android:id="@+id/auth_attribute_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/auth_attribute_header_name"
        android:textAppearance="@style/auth_attribute_header"
        android:layout_marginTop="27dp"/>

    <LinearLayout
        android:id="@+id/auth_attribute_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auth_attribute_header_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/field_user">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_person_22"
            android:layout_marginVertical="14dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="11dp"/>

        <EditText
            android:id="@+id/auth_attribute_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_attribute_name"
            android:inputType="textPersonName"
            android:background="@null"
            android:layout_marginVertical="14dp"
            android:layout_marginEnd="19dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/auth_attribute_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auth_attribute_layout_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/auth_attribute_header_email"
        android:textAppearance="@style/auth_attribute_header"
        android:layout_marginTop="27dp"/>

    <LinearLayout
        android:id="@+id/auth_attribute_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auth_attribute_header_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/field_user">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_email_22"
            android:layout_marginVertical="14dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="11dp"/>

        <EditText
            android:id="@+id/auth_attribute_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_attribute_email"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:layout_marginVertical="14dp"
            android:layout_marginEnd="19dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>