<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResetPasswordActivity"
    android:paddingHorizontal="24dp"
    android:paddingTop="74dp"
    android:paddingBottom="37dp">

    <TextView
        android:id="@+id/reset_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/reset_password"
        android:textAppearance="@style/header_auth" />

    <TextView
        android:id="@+id/reset_password_attribute_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset_password_header"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/auth_attribute_header_email"
        android:textAppearance="@style/auth_attribute_header"
        android:layout_marginTop="27dp" />

    <LinearLayout
        android:id="@+id/reset_password_attribute_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset_password_attribute_header_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/field_user">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_person_22"
            android:layout_marginVertical="14dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="11dp"/>

        <EditText
            android:id="@+id/reset_password_attribute_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_attribute_email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:layout_marginVertical="14dp"
            android:layout_marginEnd="19dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        app:layout_constraintTop_toBottomOf="@id/reset_password_attribute_layout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:textAppearance="@style/button_text_appearance"
        android:text="@string/reset_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>