<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserProfileActivity"
    android:paddingHorizontal="24dp"
    android:paddingBottom="37dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/title_user_profile"
            android:text="@string/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/text_large_title"/>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_info_user_profile"
        app:layout_constraintTop_toBottomOf="@id/toolbar_user_profile"/>

    <LinearLayout
        android:id="@+id/linear_layout_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@id/user_info_user_profile">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reset_password_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="12sp"
            android:textAppearance="@style/button_text_appearance"
            android:background="@drawable/button_primary"
            android:drawableStart="@drawable/baseline_lock_22"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            android:paddingHorizontal="19dp"
            android:gravity="start|center_vertical"
            android:layout_weight="1"
            android:layout_marginEnd="13dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_change_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:textSize="12sp"
            android:textAppearance="@style/button_text_appearance"
            android:background="@drawable/button_primary"
            android:drawableStart="@drawable/baseline_photo_22"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            android:paddingHorizontal="19dp"
            android:gravity="start|center_vertical"
            android:layout_weight="1"
            android:layout_marginStart="13dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_update_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:textAppearance="@style/button_text_appearance"
        android:background="@drawable/button_primary"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_user_profile"
        android:layout_marginTop="27dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_out_user_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sign_out"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_out"
        android:textAppearance="@style/text_sign_out"/>

    <ProgressBar
        android:id="@+id/progress_bar_user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large" />

</androidx.constraintlayout.widget.ConstraintLayout>